// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be support cleared 1`] = `
<div
  class="FInput-wrapper"
>
  <input
    class="FInput-root"
    style="padding-right: 0px;"
    type="text"
    value=""
  />
  <span
    class="FInput-clearedIcon FTransition-root FTransition-root-0 FTransition-fade"
    style="width: 0px;"
  >
    <svg
      style="width: 1em; height: 1em; display: inline-block; font-size: inherit; fill: currentColor;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
      />
    </svg>
  </span>
</div>
`;

exports[`Input should be support cleared 2`] = `
".FTransition-root {}
.FTransition-fade {}
.FTransition-fade.fade-enter {
  opacity: 0;
}
.FTransition-fade.fade-exit {
  opacity: 1;
}
.FTransition-fade.fade-exit-active {
  opacity: 0;
}
.FTransition-fade.fade-enter-active {
  opacity: 1;
}
.FTransition-zoom {}
.FTransition-zoom.zoom-enter {}
.FTransition-zoom.zoom-exit {}
.FTransition-zoom.zoom-exit-active {
  transform: scale3d(0, 0, 0);
}
.FTransition-zoom.zoom-exit-done {
  transform: scale3d(0, 0, 0);
}
.FTransition-zoom.zoom-enter-active {
  transform: scale3d(0, 0, 0);
}
.FTransition-zoom.zoom-enter-done {
  transform: none;
}
.FTransition-slide {}
.FTransition-slide.slide-enter {
  transform: translateY(100vh);
}
.FTransition-slide.slide-exit {
  transform: none;
}
.FTransition-slide.slide-exit-active {
  transform: translateY(100vh);
}
.FTransition-slide.slide-exit-done {
  transform: translateY(100vh);
}
.FTransition-slide.slide-enter-done {
  transform: none;
}
.FTransition-collapse {}
.FTransition-grow {}
.FTransition-grow.grow-enter {
  opacity: 0;
  transform: scale(0.75, 0.5625);
}
.FTransition-grow.grow-exit {}
.FTransition-grow.grow-exit-active {
  opacity: 0;
  transform: scale(0.75, 0.5625);
}
.FTransition-grow.grow-exit-done {
  opacity: 0;
  transform: scale(0.75, 0.5625);
}
.FTransition-grow.grow-enter-active {
  opacity: 1;
  transform: scale(1, 1);
}
.FTransition-grow.grow-enter-done {
  opacity: 1;
  transform: none;
}
.FTransition-root-0 {
  opacity: 0;
  transition: opacity 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,visibility 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  visibility: hidden;
}
.FTransition-collapse-1 {}
.FTransition-collapse-1.collapse-appear {
  height: auto;
}
.FTransition-collapse-1.collapse-enter {
  height: 0;
}
.FTransition-collapse-1.collapse-exit {
  height: 0;
}
.FTransition-collapse-1.collapse-exit-active {
  height: 0;
}
.FTransition-collapse-1.collapse-enter-active {
  height: 0;
}
.FTransition-collapse-1.collapse-enter-done {
  height: auto;
}
.FInput-root {
  font: inherit;
  width: 100%;
  border: 2px solid;
  outline: none;
  padding: 6px 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  border-color: #dedede;
  border-radius: 2px;
}
.FInput-root:hover {
  border-color: #b5b5b5;
}
.FInput-root:active, .FInput-root:focus {
  border-color: #0078d4;
}
.FInput-root:disabled {
  color: #8c8c8c;
  cursor: not-allowed;
  pointer-events: none;
  background-color: #e9e9e9;
}
.FInput-root:not(:first-child) {
  padding-left: 30px;
}
.FInput-root:not(:last-child) {
  padding-right: 30px;
}
.FInput-error {
  border-color: #f44336;
}
.FInput-error:hover {
  border-color: #f44336;
}
.FInput-error:active, .FInput-error:focus {
  border-color: #f44336;
}
.FInput-wrapper {
  font: inherit;
  display: inline-block;
  position: relative;
  min-width: 200px;
}
.FInput-clearedIcon {
  top: 0;
  right: 0;
  cursor: pointer;
  height: 100%;
  display: inline-flex;
  position: absolute;
  font-size: 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  align-items: center;
  justify-content: center;
}
.FInput-clearedIcon:hover {
  color: #ffffff;
  background-color: #0078d4;
}
.FInput-prefix {
  top: 50%;
  left: 12px;
  color: rgba(0, 0, 0, 0.4);
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}
.FInput-suffix {}
.FInput-suffix-0 {
  top: 50%;
  color: rgba(0, 0, 0, 0.4);
  right: 12px;
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}"
`;

exports[`Input should be support error 1`] = `
".FInput-root {
  font: inherit;
  width: 100%;
  border: 2px solid;
  outline: none;
  padding: 6px 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  border-color: #dedede;
  border-radius: 2px;
}
.FInput-root:hover {
  border-color: #b5b5b5;
}
.FInput-root:active, .FInput-root:focus {
  border-color: #0078d4;
}
.FInput-root:disabled {
  color: #8c8c8c;
  cursor: not-allowed;
  pointer-events: none;
  background-color: #e9e9e9;
}
.FInput-root:not(:first-child) {
  padding-left: 30px;
}
.FInput-root:not(:last-child) {
  padding-right: 30px;
}
.FInput-error {
  border-color: #f44336;
}
.FInput-error:hover {
  border-color: #f44336;
}
.FInput-error:active, .FInput-error:focus {
  border-color: #f44336;
}
.FInput-wrapper {
  font: inherit;
  display: inline-block;
  position: relative;
  min-width: 200px;
}
.FInput-clearedIcon {
  top: 0;
  right: 0;
  cursor: pointer;
  height: 100%;
  display: inline-flex;
  position: absolute;
  font-size: 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  align-items: center;
  justify-content: center;
}
.FInput-clearedIcon:hover {
  color: #ffffff;
  background-color: #0078d4;
}
.FInput-prefix {
  top: 50%;
  left: 12px;
  color: rgba(0, 0, 0, 0.4);
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}
.FInput-suffix {}
.FInput-suffix-0 {
  top: 50%;
  color: rgba(0, 0, 0, 0.4);
  right: 12px;
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}"
`;

exports[`Input should be support prefix 1`] = `
".FInput-root {
  font: inherit;
  width: 100%;
  border: 2px solid;
  outline: none;
  padding: 6px 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  border-color: #dedede;
  border-radius: 2px;
}
.FInput-root:hover {
  border-color: #b5b5b5;
}
.FInput-root:active, .FInput-root:focus {
  border-color: #0078d4;
}
.FInput-root:disabled {
  color: #8c8c8c;
  cursor: not-allowed;
  pointer-events: none;
  background-color: #e9e9e9;
}
.FInput-root:not(:first-child) {
  padding-left: 30px;
}
.FInput-root:not(:last-child) {
  padding-right: 30px;
}
.FInput-error {
  border-color: #f44336;
}
.FInput-error:hover {
  border-color: #f44336;
}
.FInput-error:active, .FInput-error:focus {
  border-color: #f44336;
}
.FInput-wrapper {
  font: inherit;
  display: inline-block;
  position: relative;
  min-width: 200px;
}
.FInput-clearedIcon {
  top: 0;
  right: 0;
  cursor: pointer;
  height: 100%;
  display: inline-flex;
  position: absolute;
  font-size: 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  align-items: center;
  justify-content: center;
}
.FInput-clearedIcon:hover {
  color: #ffffff;
  background-color: #0078d4;
}
.FInput-prefix {
  top: 50%;
  left: 12px;
  color: rgba(0, 0, 0, 0.4);
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}
.FInput-suffix {}
.FInput-suffix-0 {
  top: 50%;
  color: rgba(0, 0, 0, 0.4);
  right: 12px;
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}"
`;

exports[`Input should be support suffix 1`] = `
".FInput-root {
  font: inherit;
  width: 100%;
  border: 2px solid;
  outline: none;
  padding: 6px 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  border-color: #dedede;
  border-radius: 2px;
}
.FInput-root:hover {
  border-color: #b5b5b5;
}
.FInput-root:active, .FInput-root:focus {
  border-color: #0078d4;
}
.FInput-root:disabled {
  color: #8c8c8c;
  cursor: not-allowed;
  pointer-events: none;
  background-color: #e9e9e9;
}
.FInput-root:not(:first-child) {
  padding-left: 30px;
}
.FInput-root:not(:last-child) {
  padding-right: 30px;
}
.FInput-error {
  border-color: #f44336;
}
.FInput-error:hover {
  border-color: #f44336;
}
.FInput-error:active, .FInput-error:focus {
  border-color: #f44336;
}
.FInput-wrapper {
  font: inherit;
  display: inline-block;
  position: relative;
  min-width: 200px;
}
.FInput-clearedIcon {
  top: 0;
  right: 0;
  cursor: pointer;
  height: 100%;
  display: inline-flex;
  position: absolute;
  font-size: 12px;
  transition: background-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms,border-color 250ms cubic-bezier(0.76, 0.24, 0.23, 0.94) 0ms;
  align-items: center;
  justify-content: center;
}
.FInput-clearedIcon:hover {
  color: #ffffff;
  background-color: #0078d4;
}
.FInput-prefix {
  top: 50%;
  left: 12px;
  color: rgba(0, 0, 0, 0.4);
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}
.FInput-suffix {}
.FInput-suffix-0 {
  top: 50%;
  color: rgba(0, 0, 0, 0.4);
  right: 12px;
  display: flex;
  position: absolute;
  transform: translateY(-50%);
  align-items: center;
  justify-content: center;
}"
`;
